--- a/historical_rates/styles.css
+++ b/historical_rates/styles.css
@@ -12,7 +12,7 @@ td:last-child {
   text-align: center;
 }
 
-.loaded tr {
+.loaded tr:not(.form) {
   background: #fff;
   transition: all 2s 2s;
 
