--- a/historical_rates/styles.css
+++ b/historical_rates/styles.css
@@ -105,3 +105,9 @@ tr:has(+ tr td.error-row) + tr + tr .faux-input-end {
 .form {
   background: #fff8f1;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
