--- a/historical_rates/v2/styles.css
+++ b/historical_rates/v2/styles.css
@@ -1,3 +1,13 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 :focus-visible {
   outline: 2px solid black;
   outline-offset: 2px;
