--- a/historical_rates/v1/styles.css
+++ b/historical_rates/v1/styles.css
@@ -12,14 +12,10 @@ td:last-child {
   text-align: center;
 }
 
-.loaded tr:not(.form) {
-  background: #fff;
-  transition: all 2s 2s;
-
-  @starting-style {
-    background: #fff1cd;
-  }
+:where(td, th):not(:last-child) {
+  width: 128px;
 }
+
 
 #root {
   width: fit-content;
@@ -94,6 +90,21 @@ input {
 
 .form {
   background: #fff8f1;
+  position: relative;
+  top: -1px;
+
+  td {
+    border-top: 1px solid #ffa26c;
+    border-bottom: 1px solid #ffa26c;
+
+    &:first-child {
+      border-left: 1px solid #ffa26c;
+    }
+
+    &:last-child {
+      border-right: 1px solid #ffa26c;
+    }
+  }
 }
 
 input[type="number"]::-webkit-inner-spin-button,
